force-app/main/default/objects/Loan_Sync_Log__c/Loan_Sync_Log__c.object-meta.xml
<CustomObject>
    <description>Audit record of every callout made by LoanSyncService to the core system. One record per attempt (including retries).</description>
    <label>Loan Sync Log</label>
    <nameField>
        <displayFormat>SYNC-{000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Sync Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>