force-app/main/default/objects/Loan_Sync_Log__c/fields/Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Number__c</fullName>
    <description>1 for first try, 2 for first retry, etc.</description>
    <label>Attempt Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>