force-app/main/default/objects/Loan_Sync_Log__c/fields/HTTP_Status__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Status__c</fullName>
    <label>HTTP Status</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>